Added reference to DataStructures.Core

--- a/DataStructures.Console/DataStructures.Console.csproj
+++ b/DataStructures.Console/DataStructures.Console.csproj
@@ -49,6 +49,12 @@
   <ItemGroup>
     <None Include="App.config" />
   </ItemGroup>
+  <ItemGroup>
+    <ProjectReference Include="..\DataStructures.Core\DataStructures.Core.csproj">
+      <Project>{14e89379-de8a-4ce2-89d6-b7693a81b74b}</Project>
+      <Name>DataStructures.Core</Name>
+    </ProjectReference>
+  </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
   <!-- To modify your build process, add your task inside one of the targets below and uncomment it. 
        Other similar extension points exist, see Microsoft.Common.targets.
