--- a/DataStructures.Core/DataStructures.Core.csproj
+++ b/DataStructures.Core/DataStructures.Core.csproj
@@ -40,8 +40,10 @@
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
-    <Compile Include="LinkedList.cs" />
-    <Compile Include="LinkedListNode.cs" />
+    <Compile Include="Doubly Linked List\DoublyLinkedList.cs" />
+    <Compile Include="Doubly Linked List\DoublyLinkedListNode.cs" />
+    <Compile Include="Linked List\LinkedList.cs" />
+    <Compile Include="Linked List\LinkedListNode.cs" />
     <Compile Include="Node.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
   </ItemGroup>
