--- a/DataStructures.Core/DataStructures.Core.csproj
+++ b/DataStructures.Core/DataStructures.Core.csproj
@@ -47,6 +47,7 @@
     <Compile Include="Node.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="Stack\Stack.cs" />
+    <Compile Include="Stack\StackArray.cs" />
   </ItemGroup>
   <ItemGroup />
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
