--- a/DataStructures.Core/DataStructures.Core.csproj
+++ b/DataStructures.Core/DataStructures.Core.csproj
@@ -40,8 +40,8 @@
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
-    <Compile Include="Binary Tree\BinaryTree.cs" />
-    <Compile Include="Binary Tree\BinaryTreeNode.cs" />
+    <Compile Include="BinarySearchTree\BinarySearchTree.cs" />
+    <Compile Include="BinarySearchTree\BinaryTreeNode.cs" />
     <Compile Include="Doubly Linked List\DoublyLinkedList.cs" />
     <Compile Include="Doubly Linked List\DoublyLinkedListNode.cs" />
     <Compile Include="Linked List\LinkedList.cs" />
