Add Depth First Search Algorithm

--- a/src/DataStructures.Core/DataStructures.Core.csproj
+++ b/src/DataStructures.Core/DataStructures.Core.csproj
@@ -47,6 +47,10 @@
     <Compile Include="BinarySearchTree\BinaryTreeNode.cs" />
     <Compile Include="Doubly Linked List\DoublyLinkedList.cs" />
     <Compile Include="Doubly Linked List\DoublyLinkedListNode.cs" />
+    <Compile Include="Graph\Graph.cs" />
+    <Compile Include="Graph\GraphAlgorithms.cs" />
+    <Compile Include="Graph\GraphTraversalType.cs" />
+    <Compile Include="Graph\Vertex.cs" />
     <Compile Include="Linked List\LinkedList.cs" />
     <Compile Include="Linked List\LinkedListNode.cs" />
     <Compile Include="Node.cs" />
