--- a/src/DataStructures.Core/DataStructures.Core.csproj
+++ b/src/DataStructures.Core/DataStructures.Core.csproj
@@ -58,6 +58,7 @@
     <Compile Include="Graph\GraphAlgorithms.cs" />
     <Compile Include="Graph\GraphTraversalType.cs" />
     <Compile Include="Graph\GraphType.cs" />
+    <Compile Include="Graph\TopSortAlgorithmType.cs" />
     <Compile Include="Graph\Vertex.cs" />
     <Compile Include="Linked List\LinkedList.cs" />
     <Compile Include="Linked List\LinkedListNode.cs" />
